--- a/css/contacts.css
+++ b/css/contacts.css
@@ -21,7 +21,7 @@
 
 .contacts-item {
   display: flex;
-  gap: 20px;
+  gap: 10px;
 }
 
 .contacts-icon {
